force-app/main/default/objects/Sca__c/Sca__c.object-meta.xml
<CustomObject>
    <label>Scan</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>