force-app/main/default/objects/Sca__c/fields/EPC__c.field-meta.xml
<CustomField>
    <fullName>EPC__c</fullName>
    <label>EPC</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>