force-app/main/default/objects/Sca__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <formula>IF( OR( ISBLANK( Scanned__Latitude__s   ) , ISBLANK(  Scanned__Longitude__s  ) ) , &quot;Missing Coordinates&quot;, IMAGE( Map_Link__c , &quot;&quot;, 350,400))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map</label>
    <type>Text</type>
</CustomField>