force-app/main/default/objects/Sca__c/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <formula>&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; &amp; TEXT( Scanned__Latitude__s ) &amp; &quot;,&quot; &amp; TEXT( Scanned__Longitude__s ) &amp; &quot;&amp;zoom=6&amp;size=400x350&amp;sensor=true&amp;markers=color:red%7Clabel:A%7C&quot;&amp; TEXT( Scanned__Latitude__s ) &amp; &quot;,&quot; &amp; TEXT( Scanned__Longitude__s )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Link</label>
    <type>Text</type>
</CustomField>