force-app/main/default/objects/Sca__c/fields/Scanned__c.field-meta.xml
<CustomField>
    <fullName>Scanned__c</fullName>
    <label>Scanned</label>
    <required>true</required>
    <scale>2</scale>
    <type>Location</type>
</CustomField>