force-app/main/default/objects/Sca__c/fields/Scanned_Date__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Scanned Date</label>
    <type>DateTime</type>
</CustomField>